[package]
name = "ens"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
hex = "0.4"
ens-normalize-rs = "0.1.1"
